#9 - Fix custom signs not working #2 - Added "/carz addCB" and "/carz addClimbBlock" - config is now "ClimbBlocks.Materials" #3 - Added climb block strength to config #1 - Added ownership check when breaking cars and preventing them #8 - Added "isOnlyOwnedCarsDrive" to config, to allow only owned cars to drive #7 - Added "stashing" functionality, using either new command "/carz stash" or by breaking an owned car

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,9 +1,10 @@
 name: Carz
-version: 6.1
+version: 6.2
 description: Drive in Minecraft
 softdepend: [Vault]
 author: A5H73Y
 main: me.A5H73Y.Carz.Carz
+api-version: 1.13
 commands:
   carz:
     description: Carz commands
