--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,12 @@
 name: Carz
-version: 7.0
+version: "7.0"
 description: Drive in Minecraft
 softdepend: [Vault, BountifulAPI]
 author: A5H73Y
-main: me.A5H73Y.Carz.Carz
-api-version: 1.13
+main: io.github.a5h73y.Carz
+api-version: "1.13"
 commands:
   carz:
     description: Carz commands
+  carzc:
+    description: Carz non-player commands
