--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         </repository>
         <repository>
             <id>vault-repo</id>
-            <url>http://nexus.hc.to/content/repositories/pub_releases</url>
+            <url>https://jitpack.io</url>
         </repository>
         <repository>
             <id>a5h73y-repo</id>
