Complete refactor of purchase system Allow for Car Key to glow, set display name Tidied Utility classes
#5 - Add Confirmation for purchases
#13 - Made Key more interesting

--- a/pom.xml
+++ b/pom.xml
@@ -30,21 +30,25 @@
     </licenses>
 
     <repositories>
+        <!-- Spigot API -->
         <repository>
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
+        <!-- Vault Repo -->
         <repository>
             <id>vault-repo</id>
             <url>https://jitpack.io</url>
         </repository>
-        <repository>
-            <id>a5h73y-repo</id>
-            <url>https://dl.bintray.com/a5h73y/repo/</url>
-        </repository>
+        <!-- bStats Repo -->
         <repository>
             <id>CodeMC</id>
             <url>https://repo.codemc.org/repository/maven-public</url>
+        </repository>
+        <!-- My Bintray repo -->
+        <repository>
+            <id>a5h73y-repo</id>
+            <url>https://dl.bintray.com/a5h73y/repo/</url>
         </repository>
     </repositories>
 
@@ -89,6 +93,12 @@
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
