#25 - Added PlaceholderAPI support #26 - Added Carz Events Added "removeclimb" and "removespeed" commands Various fixes / improvements

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: Carz
 version: ${project.version}
 description: ${project.description}
-softdepend: [Vault, BountifulAPI]
+softdepend: [Vault, BountifulAPI, PlaceholderAPI]
 author: A5H73Y
 main: io.github.a5h73y.carz.Carz
 api-version: "1.14"
