--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
             <id>a5h73y-repo</id>
             <url>https://dl.bintray.com/a5h73y/repo/</url>
         </repository>
+        <!-- Placeholder API Repo -->
+        <repository>
+            <id>placeholderapi-repo</id>
+            <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -88,17 +93,12 @@
             <version>1.7</version>
             <scope>compile</scope>
         </dependency>
-        <!-- Updater -->
+        <!-- Placeholder API -->
         <dependency>
-            <groupId>com.googlecode.json-simple</groupId>
-            <artifactId>json-simple</artifactId>
-            <version>1.1.1</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>me.clip</groupId>
+            <artifactId>placeholderapi</artifactId>
+            <version>2.10.6</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
