Added "store" command and signs which open a Car Store GUI Added "/carz removeowner" to remove car ownership (for role play etc.) Corrected permissions for ownership overrides, reintroduced "Carz.Start" permission Fixed normal signs not registering Fixed Placeholder integration

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
             <id>placeholderapi-repo</id>
             <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
+        <!-- InventoryGui -->
+        <repository>
+            <id>minebench-repo</id>
+            <url>https://repo.minebench.de/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -86,6 +91,13 @@
             <version>1.6.4</version>
             <scope>provided</scope>
         </dependency>
+        <!-- Placeholder API -->
+        <dependency>
+            <groupId>me.clip</groupId>
+            <artifactId>placeholderapi</artifactId>
+            <version>2.10.6</version>
+            <scope>provided</scope>
+        </dependency>
         <!-- bStats -->
         <dependency>
             <groupId>org.bstats</groupId>
@@ -93,12 +105,12 @@
             <version>1.7</version>
             <scope>compile</scope>
         </dependency>
-        <!-- Placeholder API -->
+        <!-- InventoryGui -->
         <dependency>
-            <groupId>me.clip</groupId>
-            <artifactId>placeholderapi</artifactId>
-            <version>2.10.6</version>
-            <scope>provided</scope>
+            <groupId>de.themoep</groupId>
+            <artifactId>inventorygui</artifactId>
+            <version>1.4.2-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
@@ -138,12 +150,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.2</version>
+                <version>3.2.4</version>
                 <configuration>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
                     <artifactSet>
                         <includes>
                             <include>org.bstats:*</include>
+                            <include>de.themoep:*</include>
                         </includes>
                     </artifactSet>
                     <filters>
