--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -1,49 +1,57 @@
-name: Build
+name: Build & publish release
+
+on: push
 
 env:
   artifact_name: 'Carz-7.3'
   release_type: '-RELEASE'
-
-on: push
+  build-number: ${github.run_number}
 
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - name: Set up JDK 11 (LTS)
-        uses: actions/setup-java@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
         with:
           java-version: '11'
-          distribution: 'adopt'
-          cache: maven
+          distribution: 'temurin'
 
       - name: Build with Maven
-        run: mvn -B clean package
+        run: mvn -B clean package -DskipTests
 
+  release:
+    runs-on: ubuntu-latest
+
+    needs: build
+    steps:
       - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ env.artifact_name }}${{ env.release_type }}.${{ github.run_number }}
-          release_name: ${{ env.artifact_name }}${{ env.release_type }}.${{ github.run_number }}
-          draft: false
-          prerelease: false
+          files: target/*.jar
 
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/${{ env.artifact_name }}.jar
-          asset_name: ${{ env.artifact_name }}${{ env.release_type }}.jar
-          asset_content_type: application/java-archive
+#      - name: Create Release
+#        id: create_release
+#        uses: actions/create-release@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          tag_name: ${{ env.artifact_name }}${{ env.release_type }}.${{ github.run_number }}
+#          release_name: ${{ env.artifact_name }}${{ env.release_type }}.${{ github.run_number }}
+#          draft: false
+#          prerelease: false
+#
+#      - name: Upload Release Asset
+#        id: upload-release-asset
+#        uses: actions/upload-release-asset@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          upload_url: ${{ steps.create_release.outputs.upload_url }}
+#          asset_path: target/${{ env.artifact_name }}.jar
+#          asset_name: ${{ env.artifact_name }}${{ env.release_type }}.jar
+#          asset_content_type: application/java-archive
 
